# CppChess

./: CMakeLists.txt
src/: Main.cpp
src/ai/: Defs.h  Evaluation.cpp  Evaluation.h  Facade.cpp  Facade.h  MoveSorter.h  Search.cpp  Search.h
src/ai/hash/: TranspositionTable.cpp  TranspositionTable.h
src/core/: Board.cpp  Board.h  Common.h  Fen.cpp  Fen.h  Lookups.cpp  Lookups.h  Magic.cpp  Magic.h  Misc.cpp  Misc.h  Random.cpp  Random.h  ScopedInitProfiler.h  ScopedTimer.h
src/core/eval/: IncrementalPieceSquareEvaluator.cpp  IncrementalPieceSquareEvaluator.h
src/core/hash/: Zobrist.cpp  Zobrist.h
src/core/moves/: Move.h  MoveGeneration.cpp  MoveGeneration.h
src/database/: BookMoveSelector.cpp  BookMoveSelector.h
